--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
 			<script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>
 			<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
-			<script src="assets/libs/angular-linkify-min.js"></script>
-			<script src="assets/libs/linkify-html.js"></script>
+			<!--<script src="assets/libs/angular-linkify.min.js"></script>-->
 			<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 			<script type="text/javascript" src="assets/libs/moment/moment.2.10.6/moment.js"></script>
 
